atmtable height modify

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -1856,6 +1856,10 @@ input[type="number"]::-webkit-inner-spin-button {
     .box-shadow-style();
     font-size: 1.2rem;
   }
+
+  .row-elements,.answers-list {
+    height: 70px;
+  }
 }
 
 
@@ -1884,6 +1888,11 @@ input[type="number"]::-webkit-inner-spin-button {
     .sq-atmtable-btn {
       font-size: 1rem !important;
     }
+
+    .row-elements,.answers-list {
+      height: auto;
+    }
+
   }
 }
 
