--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -1514,6 +1514,16 @@ input[type="number"]::-webkit-inner-spin-button {
         padding-bottom: 10px;
         margin-bottom: 10px;
     }
+
+    .zeroHeight {
+      display: none;
+    }
+
+    .col-legend {
+        font-weight: bold;
+        border-bottom: 1px solid #ccc;
+        padding-bottom: 10px;
+    }
 }
 
 
