--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2065,3 +2065,51 @@ input[type="text"]:disabled {
     .safeFadeout(@custom-even-color, 20%);
 }
 
+
+
+/* flex lists */
+.flex-list {
+  .grid-list-mode {
+    tbody:nth-child(1) {
+        display: flex;
+        gap: 10px;
+        min-width: 924px;
+    }
+
+    .row-elements+.row-elements {
+      margin-top: 0 !important;
+    }
+  }
+}
+
+@media @mobile {
+  .flex-list {
+    .grid-list-mode {
+        tbody:nth-child(1) {
+          flex-direction: column;
+          min-width: 0;
+        }
+    }
+  }
+}
+
+
+/* timer */
+.timesec {
+  position: fixed; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  font-size: 1.8rem; 
+  font-weight: bold; 
+  bottom: 13%; 
+  right: 5%; 
+  width: 50px; 
+  height: 50px; 
+  padding: 5px; 
+  background-color: @custom-color; 
+  color: @custom-text-color; 
+  border-radius: 100%; 
+  .box-shadow-style();
+}
+
