--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2188,6 +2188,13 @@ input[type="text"]:disabled {
     }
   }
 
+  &.show-column {
+    .custom-card {
+      flex-direction: column;
+    }
+  }
+  
+
   .question {
     margin-bottom: 0 !important;
   }
