heatclick btn update

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2217,4 +2217,10 @@ input[type="text"]:disabled {
 }
 
 
-
+/* Heat click */
+.sq-hcadvanced {
+  .sq-hcadvanced-button {
+    background-color: @custom-color !important;
+    color: @custom-text-color !important;
+  }
+}
