--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2223,3 +2223,8 @@ input[type="text"]:disabled {
     color: @custom-text-color !important;
   }
 }
+
+/* comment text (html tag) */
+.comment-text {
+  max-width: 924px;
+}
