--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -1543,7 +1543,7 @@ input[type="number"]::-webkit-inner-spin-button {
             max-width: 380px;
         }
 
-        tbody:nth-child(1) {
+        tbody {
             display: flex;
             gap: 10px;
         }
@@ -1686,7 +1686,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
     @media @mobile {
         .grid-list-mode {
-            tbody:nth-child(1) {
+            tbody {
                 flex-direction: column;
             }
         }
