--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -1695,7 +1695,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
 /* Hangle converter */
 .hangle-span {
-  color: @error-color;
+  color: @custom-color;
   border:0;
   text-align:right;
   width:200px; 
