layout.less update

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -1527,6 +1527,12 @@ input[type="number"]::-webkit-inner-spin-button {
         border-bottom: 1px solid #ccc;
         padding-bottom: 10px;
     }
+
+    .row-legend-group {
+        border-radius: 10px;
+        .box-shadow-style();
+        margin-bottom: 7px;
+    }
 }
 
 
