q-name class update

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2228,3 +2228,23 @@ input[type="text"]:disabled {
     color: @custom-text-color !important;
   }
 }
+
+
+/* Question Name class */
+.q-name {
+    padding: 6px 15px 6px 15px;
+    margin-bottom: 5px;
+    background-color: @custom-color;
+    color: @custom-text-color;
+    font-weight: bold;
+    width: fit-content;
+    height: fit-content;
+    text-align: center;
+    font-size: 1.1rem;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    white-space: nowrap;
+    .box-shadow-style();
+}
