custom rank add hidden class;

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2248,3 +2248,10 @@ input[type="text"]:disabled {
     white-space: nowrap;
     .box-shadow-style();
 }
+
+
+/* OnlineIntro a tag modify */
+#question_text_OnlineIntro a {
+  word-break: break-all;
+    display: block;
+}
