fir animation update

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2255,3 +2255,9 @@ input[type="text"]:disabled {
   word-break: break-all;
     display: block;
 }
+
+
+/* fir animation */
+.fir-base, .fir-bg, .fir-selected {
+  transition-duration: 0.15s;
+}
