--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2266,7 +2266,7 @@ input[type="text"]:disabled {
 
 
 /* Step By Step Question  */
-.sts-question {
+.sbs-question {
     .grid-list-mode {
       .row-elements {
         max-width: 350px;
