--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -1536,12 +1536,99 @@ input[type="number"]::-webkit-inner-spin-button {
 }
 
 
-/* BM Question  */
-.bm-question {
-    .select-disabled {
+/* BM & SBS */
+.none-class() {
+  .none {
+        display: flex;
+        flex-direction: row;
+        font-size: 1.3rem;
+        font-weight: normal;
+        margin-top: 10px;
+        align-items: center;
+
+        input[type='checkbox'] {
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            cursor: pointer;
+            outline: none;
+
+            &:before {
+                content: '';
+                display: inline-block;
+                width: 20px;
+                height: 20px;
+                background-color: #fff;
+                border: 1px solid #ccc;
+                border-radius: 4px;
+            }
+
+            &:checked {
+                &:before {
+                    content: '';
+                    display: inline-block;
+                    width: 20px;
+                    height: 20px;
+                    background-color: @custom-color;
+                    border: 1px solid @custom-color;
+                    border-radius: 4px;
+                }
+
+                &:after {
+                    content: '';
+                    position: absolute;
+                    left: 7px;
+                    top: 3px;
+                    width: 6px;
+                    height: 12px;
+                    border: solid #fff;
+                    border-width: 0 2px 2px 0;
+                    transform: rotate(45deg);
+                }
+            }
+        }
+
+        .none-input {
+            margin-left: 5px;
+            margin-top: 5px;
+
+            .fir-hidden {
+                position: relative !important;
+                left: 0 !important;
+            }
+
+            .fir-icon {
+                display: none !important;
+            }
+        }
+    }
+}
+
+.other-oe-class(){
+    .other-open {
+        border-radius: 5px;
+        width: 100% !important;
+
+        &:disabled {
+          pointer-events: none;
+          background-color: #e3e2e2 !important;
+          opacity: 0.5;
+        }
+    }
+}
+
+.select-custom-class(){
+  select {
+      &:disabled {
         opacity: 50%;
         pointer-events: none;
+      }
     }
+}
+
+/* BM Question  */
+.bm-question {
+    .select-custom-class();
 
     .grid-list-mode {
         .row-elements {
@@ -1607,15 +1694,7 @@ input[type="number"]::-webkit-inner-spin-button {
         margin-top: 5px;
     }
 
-    .other-open {
-        border-radius: 5px;
-        width: 100% !important;
-    }
-
-    .input-disabled {
-        pointer-events: none;
-        background-color: #e3e2e2 !important;
-    }
+    .other-oe-class();
 
     .row-text {
         display: flex;
@@ -2264,113 +2343,35 @@ input[type="text"]:disabled {
 
 
 
-
 /* Step By Step Question  */
 .sbs-question {
-    .grid-list-mode {
-      .row-elements {
-        max-width: 350px;
-      }
+  .select-custom-class();
 
-      .element {
-          padding: 0.4em !important;
-      }
+  .grid-list-mode {
+    .row-elements {
+      max-width: 350px;
     }
 
-    .fir-select {
-        width: 100%;
+    .element {
+        padding: 0.4em !important;
     }
+  }
 
-    .dropdown {
-        min-width: 100% !important;
-    }
+  .fir-select {
+      width: 100%;
+  }
 
-    .none {
-        display: flex;
-        flex-direction: row;
-        font-size: 1.3rem;
-        font-weight: normal;
-        margin-top: 10px;
-        align-items: center;
+  .dropdown {
+      min-width: 100% !important;
+  }
 
-        input[type='checkbox'] {
-            -webkit-appearance: none;
-            -moz-appearance: none;
-            appearance: none;
-            cursor: pointer;
-            outline: none;
-
-            &:before {
-                content: '';
-                display: inline-block;
-                width: 20px;
-                height: 20px;
-                background-color: #fff;
-                border: 1px solid #ccc;
-                border-radius: 4px;
-            }
-
-            &:checked {
-                &:before {
-                    content: '';
-                    display: inline-block;
-                    width: 20px;
-                    height: 20px;
-                    background-color: @custom-color;
-                    border: 1px solid @custom-color;
-                    border-radius: 4px;
-                }
-
-                &:after {
-                    content: '';
-                    position: absolute;
-                    left: 7px;
-                    top: 3px;
-                    width: 6px;
-                    height: 12px;
-                    border: solid #fff;
-                    border-width: 0 2px 2px 0;
-                    transform: rotate(45deg);
-                }
-            }
-        }
-
-        .none-input {
-            margin-left: 5px;
-            margin-top: 5px;
-
-            .fir-hidden {
-                position: relative !important;
-                left: 0 !important;
-            }
-
-            .fir-icon {
-                display: none !important;
-            }
-        }
-    }
+  .none-class();
 }
 
-
-.step-by-step {
-    &.select-disabled {
-        opacity: 50%;
-        pointer-events: none;
-    }
-}
 
 .step-by-step-oe {
-    margin-top: 5px;
+  margin-top: 5px;
 
-    .other-open {
-        border-radius: 5px;
-        width: 100% !important;
-
-        &.input-disabled {
-          pointer-events: none;
-          background-color: #e3e2e2 !important;
-          opacity: 0.5;
-        }
-    }
+  .other-oe-class();
 }
 
