step by step question & bm question code re-factoring

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -1626,12 +1626,13 @@ input[type="number"]::-webkit-inner-spin-button {
     }
 }
 
-/* BM Question  */
-.bm-question {
+.custom-dropdow-question(){
+
     .select-custom-class();
 
     .grid-list-mode {
         .row-elements {
+            min-width: 300px;
             max-width: 380px;
         }
 
@@ -1703,70 +1704,7 @@ input[type="number"]::-webkit-inner-spin-button {
         font-weight: bold;
     }
 
-    .none {
-        display: flex;
-        flex-direction: row;
-        font-size: 1.3rem;
-        font-weight: normal;
-        margin-top: 10px;
-        align-items: center;
-
-        input[type='checkbox'] {
-            -webkit-appearance: none;
-            -moz-appearance: none;
-            appearance: none;
-            cursor: pointer;
-            outline: none;
-
-            &:before {
-                content: '';
-                display: inline-block;
-                width: 20px;
-                height: 20px;
-                background-color: #fff;
-                border: 1px solid #ccc;
-                border-radius: 4px;
-            }
-
-            &:checked {
-                &:before {
-                    content: '';
-                    display: inline-block;
-                    width: 20px;
-                    height: 20px;
-                    background-color: @custom-color;
-                    border: 1px solid @custom-color;
-                    border-radius: 4px;
-                }
-
-                &:after {
-                    content: '';
-                    position: absolute;
-                    left: 7px;
-                    top: 3px;
-                    width: 6px;
-                    height: 12px;
-                    border: solid #fff;
-                    border-width: 0 2px 2px 0;
-                    transform: rotate(45deg);
-                }
-            }
-        }
-
-        .none-input {
-            margin-left: 5px;
-            margin-top: 5px;
-
-            .fir-hidden {
-                position: relative !important;
-                left: 0 !important;
-            }
-
-            .fir-icon {
-                display: none !important;
-            }
-        }
-    }
+    .none-class();
 
     @media @mobile {
         .grid-list-mode {
@@ -1775,6 +1713,11 @@ input[type="number"]::-webkit-inner-spin-button {
             }
         }
     }
+}
+
+/* BM Question  */
+.bm-question {
+  .custom-dropdow-question();
 }
 
 
@@ -2345,33 +2288,10 @@ input[type="text"]:disabled {
 
 /* Step By Step Question  */
 .sbs-question {
-  .select-custom-class();
+  .custom-dropdow-question();
 
-  .grid-list-mode {
-    .row-elements {
-      max-width: 350px;
-    }
-
-    .element {
-        padding: 0.4em !important;
-    }
+  .step-by-step-oe {
+    margin-top: 5px;
+    .other-oe-class();
   }
-
-  .fir-select {
-      width: 100%;
-  }
-
-  .dropdown {
-      min-width: 100% !important;
-  }
-
-  .none-class();
 }
-
-
-.step-by-step-oe {
-  margin-top: 5px;
-
-  .other-oe-class();
-}
-
