less css update

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2295,3 +2295,9 @@ input[type="text"]:disabled {
     .other-oe-class();
   }
 }
+
+
+/* AutoSuggest Input */
+[class*="autoSuggestInput"]:focus {
+    border-color: @custom-color !important;
+}
