--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2314,7 +2314,12 @@ input[type="text"]:disabled {
         margin-bottom: 8px;
         font-weight: bold;
         font-size: 16px;
-        color: @custom-color;
+        padding: 5px;
+        text-align: center;
+        border-radius: 10px;
+        color: @custom-text-color;
+        background: @custom-color;
+        .box-shadow-style();
 
         @media (min-width: 768px) {
             font-size: 18px;
