--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -1870,8 +1870,10 @@ input[type="number"]::-webkit-inner-spin-button {
 
     .col-legend {
       background-color: @custom-sub-color;
+      border-radius: 7px;
     }
   }
+  
   .grid-table-mode {
     .odd {
       background: none;
@@ -1889,13 +1891,17 @@ input[type="number"]::-webkit-inner-spin-button {
   .row-legend {
     .box-shadow-style();
     min-width: 300px !important;
+    border-radius: 7px;
   }
+  
   .row-col-legends.row-col-legends-top:not(.colGroup) {
     display: none;
   }
+
   .sq-atmtable-btn {
     .box-shadow-style();
     font-size: 1.2rem;
+    border-radius: 7px;
   }
 
   .row-elements,.answers-list {
