--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -1,4 +1,4 @@
-// Theme: <Survey-Specific Theme>
+// Theme: <Frozen Theme (NIQ)>
 
 /* ================================================ READ ME! ================================================ */
 /*
