--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2400,3 +2400,9 @@ input[type='text'], input[type='number'] {
       resize: vertical;
     }
 }
+
+
+/* atm1d bug fix */
+.atm1d span {
+    pointer-events: none;
+}
