input number text-aligh right modify

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2370,6 +2370,10 @@ input[type='text'], input[type='number'] {
     .text-input-style();
 }
 
+input[type='number'] {
+  text-align: right;
+}
+
 .textarea-with-title {
     width: 100%;
     max-width: 600px;
