comment-box div snippet update

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -1685,6 +1685,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
     .dropdown {
         min-width: 100% !important;
+        max-width: 100%;
     }
 
     .indent-1 {
@@ -2410,3 +2411,4 @@ input[type='number'] {
 .atm1d span {
     pointer-events: none;
 }
+
