--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -1787,7 +1787,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
 @media @mobile {
   .clean-group {
-    max-width: 100%;
+    max-width: 100% !important;
     text-align: center;
     padding-left: 0px;
   }
