less update / mark, rankCnt update

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -1338,6 +1338,11 @@ body {
   margin-left: 0 !important;
 }
 
+.sq-cardrating-cardset .sq-cardrating-cards li {
+  border-radius: 10px;
+  .box-shadow-style();
+}
+
 .sq-cardrating-bar {
   &[data-active], & {
     background-color: @custom-color !important;
