less css update

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2417,3 +2417,10 @@ input[type='number'] {
     pointer-events: none;
 }
 
+/* Slidernumber style */
+.sq-slidernumber {
+  .answers {
+    max-width: 924px;
+  }
+}
+
