detail summary update

--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -1498,9 +1498,9 @@ input[type="number"]::-webkit-inner-spin-button {
 .grid-list-mode {
     .row-elements {
         border: 1px solid #ccc;
-        padding: 10px;
         border-radius: 10px;
         .box-shadow-style();
+        overflow: hidden;
     }
 
     .row-legend-left {
@@ -1531,6 +1531,7 @@ input[type="number"]::-webkit-inner-spin-button {
         font-weight: bold;
         border-bottom: 1px solid #ccc;
         padding-bottom: 10px;
+        padding-top: 10px;
     }
 
     .row-legend-group {
@@ -2417,3 +2418,10 @@ input[type='number'] {
     pointer-events: none;
 }
 
+
+/* Slidernumber style */
+.sq-slidernumber {
+  .answers {
+    max-width: 924px;
+  }
+}
