--- a/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
+++ b/DecipherSublimetextClips/shortcuts/SimpleStyles/nielseniq_-_new_-_kor.less
@@ -2145,8 +2145,8 @@ input[type="text"]:disabled {
   align-items: center; 
   font-size: 1.8rem; 
   font-weight: bold; 
-  bottom: 13%; 
-  right: 5%; 
+  top: 1%;
+  right: 50%; 
   width: 50px; 
   height: 50px; 
   padding: 5px; 
